--- a/admin/src/html/layout/_modal.ejs
+++ b/admin/src/html/layout/_modal.ejs
@@ -1052,7 +1052,64 @@
                 </button>
             </div>
             <div class="modal-body">
-                <table class="table table-fixed table-bordered">
+
+                <ul class="fake-table mb-3">
+                    <li>
+                        <div>
+                            <p>항공법</p>
+                            <span><input type="text" class="form-control"></span>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <p>항공법</p>
+                            <span><input type="text" class="form-control"></span>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <p>항공법</p>
+                            <span><input type="text" class="form-control"></span>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <p>항공법</p>
+                            <span><input type="text" class="form-control"></span>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <p>항공법</p>
+                            <span><input type="text" class="form-control"></span>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <p>항공법</p>
+                            <span><input type="text" class="form-control"></span>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <p>항공법</p>
+                            <span><input type="text" class="form-control"></span>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <p>항공법</p>
+                            <span><input type="text" class="form-control"></span>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <p>항공법</p>
+                            <span><input type="text" class="form-control"></span>
+                        </div>
+                    </li>
+                </ul>
+                <!-- <table class="table table-fixed table-bordered">
                     <colgroup>
                         <col style="width:16.66%">
                         <col style="width:16.66%">
@@ -1175,7 +1232,7 @@
                             </td>
                         </tr>
                     </tbody>
-                </table>
+                </table> -->
 
                 <div class="d-flex justify-content-center p-b-20 border-bottom">
                     <button type="button" class="btn btn-primary width-90px">점수 적용</button>
